@@ -2,5 +2,6 @@
 
 {:paths ["src" "resources"]
  :deps  {org.clojure/clojure {:mvn/version "1.11.1"}
+         camel-snake-kebab/camel-snake-kebab {:mvn/version "0.4.3"}
          io.opentelemetry/opentelemetry-api {:mvn/version "1.26.0"}
          io.opentelemetry/opentelemetry-semconv {:mvn/version "1.26.0-alpha"}}}
